# kafka-learning

./: README.md  consumer.py  producer.py  pyproject.toml
